# CPP-Module-08

./: CMakeLists.txt
ex00/: Makefile  Template.cpp  Template.hpp  easyfind.hpp  easyfind.tpp  main.cpp
ex01/: Makefile  Span.cpp  Span.hpp  main.cpp
